--- a/index.html
+++ b/index.html
@@ -506,12 +506,12 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 		</li>
 	</ul>
 	<ul>[ Presentation ]
-		<li> 1. <B> XUE Wenjing, CHEN Hongxi, DING Guobin, QIAO Guan</B> [<I> Best Report </I>]<img src="../../images/new.jpg" height="40">
+		<li> 1. <B> XUE Wenjing, CHEN Hongxi, DING Guobin, QIAO Guan</B> [<I> Best Report of Project 1 </I>]<img src="../../images/new.jpg" height="40">
 	 	<br> 
 		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/tree/master/2023/project1/best_overall_Project1 [XUE Wenjing-CHEN Hongxi-DING Guobin-QIAO Guan].pdf"> report (pdf) </a>]
 	<p>
 	</li>
-		<li> 2. <B> Aoran LI, Tianying ZHOU, Langting WENG, Yijia MA </B> [<I> Best Technique Report </I>]<img src="../../images/new.jpg" height="40">
+		<li> 2. <B> Aoran LI, Tianying ZHOU, Langting WENG, Yijia MA </B> [<I> Best Technique of Project 1 </I>]<img src="../../images/new.jpg" height="40">
 	 	<br> 
 		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/tree/master/2023/project1/best_tech_MAFS 6010Z_Project1_[Aoran Li, Tianying Zhou, Langting Weng, Yijia Ma]"> report (pptx) </a>]
 	<p>
