--- a/index.html
+++ b/index.html
@@ -535,8 +535,8 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 		<li> Deep Q-Learning Pytorch Tutorial: [<a href="https://pytorch.org/tutorials/intermediate/reinforcement_q_learning.html"> link </a> ]
 		</li>
 		<li> A Tutorial of Reinforcement Learning for Quantitative Trading: 
-		[<a href="https://github.com/yao-lab/yao-lab.github.io/blob/master/aifin/2021/tutorial/Tutorial_FinRL_stock_trading_NeurIPS_2018_3run.ipynb"> Tutorial </a>]
-		[<a href="https://github.com/yao-lab/yao-lab.github.io/blob/master/aifin/2021/tutorial/Tutorial_FinRL_replicate_3run.ipynb"> Replicate </a>]
+		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/tree/master/tutorial/Tutorial_FinRL_stock_trading_NeurIPS_2018_3run.ipynb"> Tutorial </a>]
+		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/tree/master/tutorial/Tutorial_FinRL_replicate_3run.ipynb"> Replicate </a>]
 		</li>
 		<li> FinRL: Deep Reinforcement Learning for Quantitative Finance
 		[<a href="https://github.com/AI4Finance-Foundation/FinRL"> GitHub </a>]
