--- a/index.html
+++ b/index.html
@@ -552,48 +552,44 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 <td></td>
 </tr>
 
+	<td>20/11/2023, Mon</td>
+<td>Lecture 10: Final Project [<a href="slides/Lecture10_reinforcement.pdf"> slides </a>]  
+	<br>
+	<ul>[ Project 3 ]		
+		<li> Description: [<a href="project3/project3.pdf"> project3.pdf </a>]
+		</li>
+		<!---<li> Collection of Project 3 Reports [<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/tree/master/2023/project3"> GitHub </a>]</li>
+		--->
+		<li> Cryptocurrency Trading Project [<a href="project3/Cryptocurrency.pdf"> slides </a>]
+		</li>	
+		<p>
+		</ul>
+	<br>
+	
+	<ul>[ Reference ]
+		<li> Kaggle: G-Research Crypto Forecasting. [<a href="https://www.kaggle.com/c/g-research-crypto-forecasting/"> link </a>]
+		</li>
+		<li> Kaggle: M5 Forecasting - Accuracy, Estimate the unit sales of Walmart retail goods. [<a href="https://www.kaggle.com/c/m5-forecasting-accuracy"> link </a>]
+		</li>
+		<li> Kaggle: M5 Forecasting - Uncertainty, Estimate the uncertainty distribution of Walmart unit sales. [<a href="https://www.kaggle.com/c/m5-forecasting-uncertainty"> link </a>]
+		</li>
+	</ul>
 
-<!---
-<td>21/10/2021, Thu</td>
-<td>Lecture 07: Introduction of quantitative investing with machine learning  </a>  
 	<br>
 	<ul>[ Guest Talk ]
-		<li> Title: Introduction of quantitative investing with machine learning [<a href="slides/Lecture07_QuantML.pdf"> slides </a>] </li>
-		<li> Speaker: Prof. <a href="http://www.bm.ust.hk/acct/faculty-and-staff/directory/achy">Haifeng You</a>, HKUST </li>
-		<li> Bio: Haifeng You is a Professor of Accounting and Co-Director of the Center for Securities Analysis with Financial Technology at 
-		Hong Kong University of Science and Technology (HKUST). His research focuses on the role of financial information and financial technology 
-		in equity investment. He has published on leading academic and professional journals such as Journal of Financial Economics, Journal of 
-		Accounting and Economics, and Financial Analyst Journal. Previously, he served as the Head of Quantitative Equity Research at China Investment 
-		Corporation and Quantitative Researcher at Barclays Global Investors.  He has also served as advisors and consultants for investment firms 
-		such as GSA capital in the UK and China Pacific Asset Managemen and Bosera Asset Management in China, helping them to build Asian and global 
-		quantitative equity strategies. 
-		
-Professor You holds a PhD degree in Accounting from University of California, Berkeley and a BA degree in Finance from Peking University.
+		<li> Title:  Sequential Predictive Conformal Inference for Time Series [<a href="slides/Lecture09_XU_Chen.pdf"> slides </a>] </li>
+		<li> Speaker: <a href="https://sites.gatech.edu/chenxu97/">Chen XU</a>, Georgia Institute of Technology </li>
+		<li> Abstract: We present a new distribution-free conformal prediction algorithm for sequential data (e.g., time series), called the sequential predictive conformal inference (SPCI). 
+			We specifically account for the nature that time series data are non-exchangeable, and thus many existing conformal prediction algorithms are not applicable. The main idea is to adaptively re-estimate the conditional quantile of non-conformity scores (e.g., prediction residuals), upon exploiting the temporal dependence among them. More precisely, we cast the problem of conformal prediction interval as predicting the quantile of a future residual, given a user-specified point prediction algorithm. Theoretically, we establish asymptotic valid conditional coverage upon extending consistency analyses in quantile regression. Using simulation and real-data experiments, we demonstrate a significant reduction in interval width of SPCI compared to other existing methods under the desired empirical coverage.
+		</li>
+		<li> Bio: Chen Xu is currently a 4th year Operations Research PhD at Georgia Tech ISyE, where he is supervised by Prof. Yao Xie. His current research interests are two-fold. (1) Uncertainty quantification for machine learning models. Specifically, advance conformal prediction as a distribution-free method for arbitrarily complex deep models, especially in the context of time-series modeling. (2) Generative models through flow-based neural networks. Specifically, develop scalable computational tools for problems at the intersection of statistics and optimization, including extensions to high-dimensional optimal transport, distributionally robust optimization, and differential privacy. He has published in top machine learning conferences (e.g., ICML 2021 oral, NeurIPS 2023 spotlight) and journals (e.g., IEEE TPAMI 2023, IEEE JSAIT). 
 		</li>
 	</ul>
 	
-	<ul>[ Topics on CNNs ]:
-		<li> Visualizing CNNs [<a href="slides/Lecture07_CNN2.pdf"> YY's slides </a>] </li>
-		<li> To view .ipynb files below, you may try <a href="https://nbviewer.jupyter.org/"> [ Jupyter NBViewer] </a> </li> 
-		<li> Visualization of VGG16 in Pytorch Notebook 
-			[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/2020/notebook/vgg16-visualization.ipynb"> vgg16-visualization.ipynb </a>] </li>
-		<li> Class activation heatmap of VGG16 in Pytorch Notebook 
-			[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/2020/notebook/vgg16-heatmap.ipynb"> vgg16-heatmap.ipynb </a>] </li>
-		<li> Fine-tuning (transfer learning) of ResNet in Pytorch Notebook 
-			[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/2020/notebook/finetuning_resnet.ipynb"> finetuning_resnet.ipynb </a>] </li>
-		<li> Neural Style of HKUST at Starry Night in Pytorch Notebook 
-			[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/2020/notebook/neural_style_starry-hkust.ipynb"> neural_style_starry-hkust.ipynb </a>] </li>
-		<li> Adversarial examples of LeNet5 with MNIST 
-			[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/2020/notebook/LeNet5_mnist_fgsm.ipynb"> LeNet5_mnist_fgsm.ipynb </a>] </li>
-	</ul>
-	
-	
-			
 </td>
-<td>Haifeng You<br>Y.Y.</td>
+<td>Y.Y.</td>
 <td></td>
 </tr>
------>
 
 
 
