--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 </tr>
 
 	<td>20/11/2023, Mon</td>
-<td>Lecture 10: Final Project [<a href="slides/Lecture10_reinforcement.pdf"> slides </a>]  
+<td>Lecture 10: Final Project and Talks. 
 	<br>
 	<ul>[ Project 3 ]		
 		<li> Description: [<a href="project3/project3.pdf"> project3.pdf </a>]
@@ -564,7 +564,6 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 		</li>	
 		<p>
 		</ul>
-	<br>
 	
 	<ul>[ Reference ]
 		<li> Kaggle: G-Research Crypto Forecasting. [<a href="https://www.kaggle.com/c/g-research-crypto-forecasting/"> link </a>]
@@ -575,7 +574,6 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 		</li>
 	</ul>
 
-	<br>
 	<ul>[ Guest Talk ]
 		<li> Title:  Sequential Predictive Conformal Inference for Time Series [<a href="slides/Lecture09_XU_Chen.pdf"> slides </a>] </li>
 		<li> Speaker: <a href="https://sites.gatech.edu/chenxu97/">Chen XU</a>, Georgia Institute of Technology </li>
