--- a/index.html
+++ b/index.html
@@ -560,8 +560,11 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 		</li>
 		<!---<li> Collection of Project 3 Reports [<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/tree/master/2023/project3"> GitHub </a>]</li>
 		--->
-		<li> Cryptocurrency Trading Project [<a href="project3/Cryptocurrency.pdf"> slides </a>]
+		<li> Kaggle Contests  [<a href="project3/project3_Crypto_M5.pdf"> slides </a>]
+		</li>
+		<li> Cryptocurrency Trading Project [<a href="project3/project3_CryptoTrading.pdf"> slides </a>]
 		</li>	
+		<li> LLM in Finance  [<a href="project3/project3_LLM+finance.pdf"> slides </a>] </li>
 		<p>
 		</ul>
 	
@@ -572,6 +575,19 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 		</li>
 		<li> Kaggle: M5 Forecasting - Uncertainty, Estimate the uncertainty distribution of Walmart unit sales. [<a href="https://www.kaggle.com/c/m5-forecasting-uncertainty"> link </a>]
 		</li>
+	</ul>
+
+	<ul>[ Presentation ]
+		<li> 1. <B> LI Aoran, MA Yijia, WENG Langting, ZHOU Tianying </B> [<I> Best Technique of Project 2 </I>]<img src="../../images/new.jpg" height="40">
+	 	<br> 
+		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/tree/master/2023/project2/best_tech_2_li_zhou_weng_ma.pdf"> report (pdf) </a>]
+	<p>
+	</li>
+		<li> 2. <B> HUANG Yuxin, LEI Yunxin, AN Tianyuan, LIN Fengshan, LIU Zongxuan </B> [<I> Best Writing of Project 2 </I>]<img src="../../images/new.jpg" height="40">
+	 	<br> 
+		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/tree/master/2023/project2/best_writing_1_huang_lei_an_lin_liu.pdf"> report (pdf) </a>]
+	<p>
+	</li>
 	</ul>
 
 	<ul>[ Guest Talk ]
