--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 		</li>
 		<li> Cryptocurrency Trading Project [<a href="project3/project3_CryptoTrading.pdf"> slides </a>]
 		</li>	
-		<li> LLM in Finance  [<a href="project3/project3_LLM+finance.pdf"> slides </a>] </li>
+		<li> Large Language Models with Financial Analysis [<a href="project3/project3_LLM+finance.pdf"> slides </a>] </li>
 		<p>
 		</ul>
 	
