--- a/index.html
+++ b/index.html
@@ -562,9 +562,9 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 		--->
 		<li> Kaggle Contests  [<a href="project3/project3_Crypto_M5.pdf"> slides </a>]
 		</li>
-		<li> Cryptocurrency Trading Project [<a href="project3/project3_CryptoTrading.pdf"> slides </a>]
+		<li> Cryptocurrency Trading Project [<a href="project3/project3_CryptoTrading.pptx"> slides (pptx) </a>]
 		</li>	
-		<li> Large Language Models with Financial Analysis [<a href="project3/project3_LLM+finance.pdf"> slides </a>] </li>
+		<li> Large Language Models with Financial Analysis [<a href="project3/project3_LLM+finance.ppptx"> slides (pptx) </a>] </li>
 		<p>
 		</ul>
 	
