--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 	<ul>[ Presentation ]
 		<li> 1. <B> LI Aoran, MA Yijia, WENG Langting, ZHOU Tianying </B> [<I> Best Technique of Project 2 </I>]<img src="../../images/new.jpg" height="40">
 	 	<br> 
-		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/tree/master/2023/project2/best_tech_2_li_zhou_weng_ma.pdf"> report (pdf) </a>]
+		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/tree/master/2023/project2/best_tech_2_li_zhou_weng_ma.pdf"> report (pdf) </a>] [<a href=" "> slides </a>]
 	<p>
 	</li>
 		<li> 2. <B> HUANG Yuxin, LEI Yunxin, AN Tianyuan, LIN Fengshan, LIU Zongxuan </B> [<I> Best Writing of Project 2 </I>]<img src="../../images/new.jpg" height="40">
