--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 	</ul>
 
 	<ul>[ Guest Talk ]
-		<li> <B>Title</B>:  Sequential Predictive Conformal Inference for Time Series [<a href="slides/Lecture09_XU_Chen.pdf"> slides </a>] </li>
+		<li> <B>Title</B>:  Sequential Predictive Conformal Inference for Time Series [<a href="slides/CP_HKUST_Yao+Chen"> slides </a>] </li>
 		<li> <B>Speaker</B>: <a href="https://sites.gatech.edu/chenxu97/">Chen XU</a>, Georgia Institute of Technology </li>
 		<li> <B>Abstract</B>: We present a new distribution-free conformal prediction algorithm for sequential data (e.g., time series), called the sequential predictive conformal inference (SPCI). 
 			We specifically account for the nature that time series data are non-exchangeable, and thus many existing conformal prediction algorithms are not applicable. The main idea is to adaptively re-estimate the conditional quantile of non-conformity scores (e.g., prediction residuals), upon exploiting the temporal dependence among them. More precisely, we cast the problem of conformal prediction interval as predicting the quantile of a future residual, given a user-specified point prediction algorithm. Theoretically, we establish asymptotic valid conditional coverage upon extending consistency analyses in quantile regression. Using simulation and real-data experiments, we demonstrate a significant reduction in interval width of SPCI compared to other existing methods under the desired empirical coverage. Source codes can be found at [<a href="https://github.com/hamrel-cxu/SPCI-code"> GitHub </a>].
