--- a/index.html
+++ b/index.html
@@ -604,43 +604,39 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 <td></td>
 </tr>
 
-
-
-	<!---
-
-
-<td>05/19/2020, Tue</td>
-<td>Lecture 13: Tutorial on Reinforcement Learning in Quantitative Trading [<a href="slides/Lecture12_tutorial_RLQT.pdf"> Weizhi's slides </a>]  
+<td>27/11/2023, Mon</td>
+<td>Lecture 11: Introduction of quantitative investing with machine learning  </a>  
 	<br>
-	<ul>[ Reference ]:
-		<li> To view .ipynb files below, you may try <a href="https://nbviewer.jupyter.org/"> [ Jupyter NBViewer] </a> </li> 
-		<li> Python Notebook on Deep Q-Learning in Trading: [<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/2020/notebook/Tutorial_DQN_in_Trading.ipynb"> link </a> ]
-		</li>
-		<li> Kaggle: M5 Forecasting - Accuracy, Estimate the unit sales of Walmart retail goods. [<a href="https://www.kaggle.com/c/m5-forecasting-accuracy"> link </a>]
-		</li>
-		<li> Kaggle: M5 Forecasting - Uncertainty, Estimate the uncertainty distribution of Walmart unit sales. [<a href="https://www.kaggle.com/c/m5-forecasting-uncertainty"> link </a>]
-		</li>
-		<li> Kaggle: Home Credit Default Risk [<a href="https://www.kaggle.com/c/home-credit-default-risk"> link </a>]
-		</li>
-		<li> Kaggle: COVID-19 Open Research Dataset Challenge (CORD-19) [<a href="https://www.kaggle.com/allen-institute-for-ai/CORD-19-research-challenge"> link </a>]
-		</li>
-		<li> Quantapian: free education, data, and tools so anyone can pursue quantitative finance. [<a href="https://www.quantopian.com/"> link </a>]
+	<ul>[ Guest Talk ]
+		<li> <B>Title</B>: Introduction of quantitative investing with machine learning [<a href="slides/Lecture07_QuantML.pdf"> slides </a>] </li>
+		<li> <B>Speaker</B>: Prof. <a href="http://www.bm.ust.hk/acct/faculty-and-staff/directory/achy">Haifeng You</a>, HKUST and Tsinghua University </li>
+		<li> <B>Bio</B>: Haifeng You is a Professor of Accounting and Co-Director of the Center for Securities Analysis with Financial Technology at 
+		Hong Kong University of Science and Technology (HKUST). His research focuses on the role of financial information and financial technology 
+		in equity investment. He has published on leading academic and professional journals such as Journal of Financial Economics, Journal of 
+		Accounting and Economics, and Financial Analyst Journal. Previously, he served as the Head of Quantitative Equity Research at China Investment 
+		Corporation and Quantitative Researcher at Barclays Global Investors.  He has also served as advisors and consultants for investment firms 
+		such as GSA capital in the UK and China Pacific Asset Managemen and Bosera Asset Management in China, helping them to build Asian and global 
+		quantitative equity strategies. Professor You holds a PhD degree in Accounting from University of California, Berkeley and a BA degree in Finance from Peking University.
 		</li>
 	</ul>
-	<ul>[ Topic ]
-		<li>  Speakers: <a href="https://www.linkedin.com/in/brzheng">Brian Zheng</a> and Anthony Woo
-		</li>
-		<li>  [<a href="slides/HKUST%20-%20AI%20in%20Finance%20-%202020.05.19.pdf"> slides </a>]
-		</li>
+	
+	<ul>[ Presentation ]
+		<li> 1. <B> HUANG Yuxin, LEI Yunxin, AN Tianyuan, LIN Fengshan, LIU Zongxuan </B> [<I> Best Writing of Project 2 </I>]<img src="../../images/new.jpg" height="40">
+	 	<br> 
+		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/tree/master/project2/best_writing_1_huang_lei_an_lin_liu.pdf"> report (pdf) </a>]
+	<p>
+	</li>
+		<li> 2. <B> JIA Yaoyao, JIANG Xiaoyue, YANG Tianhao, HUANG Yuxuan </B> [<I> Best Report of Project 2 </I>]<img src="../../images/new.jpg" height="40">
+	 	<br> 
+		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/tree/master/project2/best_overall_1_yang_jia_jiang_huang.pdf"> report (pdf) </a>]
+	<p>
+	</li>
 	</ul>
-
 
 </td>
-<td>Weizhi ZHU<br> A.W.<br> Y.Y.</td>
+<td>Y.Y.</td>
 <td></td>
 </tr>
-
---->
 
 </tbody>
 </table>
