--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 <td></td>
 </tr>
 
-
+<tr>
 <td>09/10/2023, Mon</td>
 <td>Lecture 05: An Introduction to Convolutional Neural Networks [<a href="slides/Lecture06_CNN.pdf"> slides </a>]   
 	<br>
@@ -377,6 +377,7 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 <td></td>
 </tr>
 
+<tr>
 <td>16/10/2023, Mon</td>
 <td>Lecture 06: Topics on CNN: Neural Style and Adversarial Examples [<a href="slides/Lecture07_CNN+.pdf"> slides </a>] and Support Vector Machines [<a href="slides/Lecture05_svm.pdf"> slides </a>]   
 	<br>
@@ -478,6 +479,7 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 <td></td>
 </tr>
 
+<tr>
 <td>06/11/2023, Mon</td>
 <td>Lecture 08: Attention, Transformer, GPT, and BERT [<a href="slides/Lecture09_transformer.pdf"> slides </a>]  </a>  
 	<br>
@@ -524,6 +526,7 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 <td></td>
 </tr>
 
+<tr>
 <td>13/11/2023, Mon</td>
 <td>Lecture 09: An Introduction to Reinforcement Learning with Applications in Quantitative Finance [<a href="slides/Lecture10_reinforcement.pdf"> slides </a>]  
 	<br>
@@ -552,6 +555,7 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 <td></td>
 </tr>
 
+<tr>
 	<td>20/11/2023, Mon</td>
 <td>Lecture 10: Final Project and Talks. 
 	<br>
@@ -599,6 +603,7 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 <td></td>
 </tr>
 
+<tr>
 <td>27/11/2023, Mon</td>
 <td>Lecture 11: Introduction of quantitative investing with machine learning  </a>  
 	<br>
@@ -632,6 +637,52 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 <td>Y.Y.</td>
 <td></td>
 </tr>
+
+<!---
+<tr>
+<td>25/11/2021, Thu</td>
+<td>Lecture 12: An Introduction to Unsupervised Learning: PCA, AutoEncoder, VAE, and GANs [<a href="slides/Lecture11_GAN.pdf"> slides </a>] </a>  
+	<br>
+	<ul>[Reference]:
+		<li> To view .ipynb files below, you may try <a href="https://nbviewer.jupyter.org/"> [ Jupyter NBViewer] </a> </li> 
+		<li> DCGAN for MNIST Tutorial in Pytorch Notebook 
+			[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/2020/notebook/dcgan_mnist_tutorial.ipynb"> dcgan_mnist_tutorial.ipynb </a>] 
+		</li>
+		<p>
+			
+		<li> Credit Card Fraud Detection via GAN implemented by Ruoxue LIU: [<a href="https://github.com/yao-lab/yao-lab.github.io/blob/master/aifin/2021/notebook/gan_creditcard_augmentation_11_23_2/simple_gan.ipynb"> GitHub </a>]
+		</li>
+		<li> Credit Card Fraud Detection dataset: [<a href="https://www.kaggle.com/mlg-ulb/creditcardfraud/home"> Kaggle </a>]	
+		</li>
+		<p>
+		<li> <a href="https://github.com/yao-lab/yao-lab.github.io/blob/master/data/RobustGAN/Robust_GAN.ipynb"> Robust_GAN.ipynb </a>: Jupyter Notebook for demonstration </li>
+		<li> <a href="https://github.com/yao-lab/Robust-GAN-Center"> Robust-GAN-Center </a>: robust center (mean) estimate via GANs </li>
+		<li> <a href="https://github.com/zhuwzh/Robust-GAN-Scatter"> Robust-GAN-Scatter </a>: robust scatter (covariance) estimate via GANs </li>
+		<p>
+		<li>  <B> GAO, Chao, Jiyi LIU, Yuan YAO, and Weizhi ZHU.</B>
+			<br>
+			Robust Estimation and Generative Adversarial Nets. 
+			<br>
+			<I>ICLR</I> 2019.
+			<br>
+			[<a href="https://arxiv.org/abs/1810.02030"> arXiv:1810.02030 </a>] [<a href="https://github.com/zhuwzh/Robust-GAN-Center"> GitHub </a>] [<a href="https://simons.berkeley.edu/talks/robust-estimation-and-generative-adversarial-nets"> GAO, Chao's Simons Talk </a>]
+		</li>
+		<p>
+		<li> <B>GAO, Chao, Yuan YAO, and Weizhi ZHU.</B>
+			<br>
+			Generative Adversarial Nets for Robust Scatter Estimation: A Proper Scoring Rule Perspective. 
+			<br>
+			<I>Journal of Machine Learning Research</I>, 21(160):1-48, 2020. 
+			<br>
+			[<a href="https://arxiv.org/abs/1903.01944"> arXiv:1903.01944 </a>] [<a href="https://github.com/zhuwzh/Robust-GAN-Scatter"> GitHub </a>]
+		</li>
+	</ul>
+</td>
+<td>Y.Y.</td>
+<td></td>
+</tr>
+--->
+
 
 </tbody>
 </table>
