--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 	<ul>[ Presentation ]
 		<li> 1. <B> LI Aoran, MA Yijia, WENG Langting, ZHOU Tianying </B> [<I> Best Technique of Project 2 </I>]<img src="../../images/new.jpg" height="40">
 	 	<br> 
-		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/project2/best_tech_2_li_zhou_weng_ma.pdf"> report (pdf) </a>] [<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/project2/best_tech_project_2_presentation.pdf"> slides </a>]
+		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/project2/best_tech_2_li_zhou_weng_ma.pdf"> report (pdf) </a>] [<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/project2/best_tech_2_li_zhou_weng_ma_presentation.pdf"> slides </a>]
 	<p>
 	</li>
 	</ul>
@@ -623,12 +623,12 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 	<ul>[ Presentation ]
 		<li> 1. <B> HUANG Yuxin, LEI Yunxin, AN Tianyuan, LIN Fengshan, LIU Zongxuan </B> [<I> Best Writing of Project 2 </I>]<img src="../../images/new.jpg" height="40">
 	 	<br> 
-		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/tree/master/project2/best_writing_1_huang_lei_an_lin_liu.pdf"> report (pdf) </a>]
+		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/tree/master/project2/best_writing_1_huang_lei_an_lin_liu.pdf"> report (pdf) </a>] [<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/tree/master/project2/best_writing_1_Presentation.pptx"> slides (pptx) </a>]
 	<p>
 	</li>
 		<li> 2. <B> JIA Yaoyao, JIANG Xiaoyue, YANG Tianhao, HUANG Yuxuan </B> [<I> Best Report of Project 2 </I>]<img src="../../images/new.jpg" height="40">
 	 	<br> 
-		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/tree/master/project2/best_overall_1_yang_jia_jiang_huang.pdf"> report (pdf) </a>]
+		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/tree/master/project2/best_overall_1_yang_jia_jiang_huang.pdf"> report (pdf) </a>] [<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/tree/master/project2/best_overall_1_yang_jia_jiang_huang_Presentation.pptx"> slides (pptx) </a>]
 	<p>
 	</li>
 	</ul>
