--- a/index.html
+++ b/index.html
@@ -239,12 +239,10 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 		<li> Kaggle: Home Credit Default Risk [<a href="https://www.kaggle.com/c/home-credit-default-risk"> link </a>]
 		</li>
 		
-		<!---
 		<li> GitHub Repository for reports of Project 1
 		<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/project1//"> [ GitHub ] </a>
 		<p>
 		</li>	
-		--->
 		
 	</ul>
 
@@ -423,12 +421,10 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 	<p>
 	</li>	
 	
-		<!---
-		<li> GitHub Repository for reports of Project 1
-		<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/2023/project1//"> [ GitHub ] </a>
+		<li> GitHub Repository for reports of Project 2
+		<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/project2/"> [ GitHub ] </a>
 		<p>
 		</li>	
-		--->
 		
 	</ul>
 
@@ -510,12 +506,12 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 	<ul>[ Presentation ]
 		<li> 1. <B> XUE Wenjing, CHEN Hongxi, DING Guobin, QIAO Guan</B> [<I> Best Report of Project 1 </I>]<img src="../../images/new.jpg" height="40">
 	 	<br> 
-		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/tree/master/2023/project1/best_overall_Project1 [XUE Wenjing-CHEN Hongxi-DING Guobin-QIAO Guan].pdf"> report (pdf) </a>]
+		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/tree/master/2023/project1/best_overall_Project1 [XUE Wenjing-CHEN Hongxi-DING Guobin-QIAO Guan].pdf"> report (pdf) </a>]  [<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/project1/AI_Warm-up Project_XUE_CHEN_DING_QIAO.pptx"> slides (pptx) </a>]
 	<p>
 	</li>
 		<li> 2. <B> Aoran LI, Tianying ZHOU, Langting WENG, Yijia MA </B> [<I> Best Technique of Project 1 </I>]<img src="../../images/new.jpg" height="40">
 	 	<br> 
-		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/tree/master/2023/project1/best_tech_MAFS 6010Z_Project1_[Aoran Li, Tianying Zhou, Langting Weng, Yijia Ma]"> report (pptx) </a>]
+		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/tree/master/2023/project1/best_tech_MAFS 6010Z_Project1_[Aoran Li, Tianying Zhou, Langting Weng, Yijia Ma].pptx"> report (pptx) </a>]  [<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/project1/best_tech_presentation_li_zhou_weng_ma.pdf"> slides (pdf) </a>]
 	<p>
 	</li>
 
