--- a/index.html
+++ b/index.html
@@ -601,10 +601,10 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 
 <tr>
 <td>27/11/2023, Mon</td>
-<td>Lecture 11: Introduction of quantitative investing with machine learning  </a>  
+<td>Lecture 11: Artificial Intelligence in Equity Investment  </a>  
 	<br>
 	<ul>[ Guest Talk ]
-		<li> <B>Title</B>: Introduction of quantitative investing with machine learning [<a href="slides/Lecture07_QuantML.pdf"> slides </a>] </li>
+		<li> <B>Title</B>:  Artificial Intelligence in Equity Investment [<a href="slides/Lecture11_haifeng.pdf"> slides </a>] </li>
 		<li> <B>Speaker</B>: Prof. <a href="http://www.bm.ust.hk/acct/faculty-and-staff/directory/achy">Haifeng You</a>, HKUST and Tsinghua University </li>
 		<li> <B>Bio</B>: Haifeng You is a Professor of Accounting and Co-Director of the Center for Securities Analysis with Financial Technology at 
 		Hong Kong University of Science and Technology (HKUST). His research focuses on the role of financial information and financial technology 
