--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
    <META http-equiv=Content-Type content="text/html; charset=gb2312">
-   <title>MAFS 6010Z: AI in Fintech </title>
+   <title>MAFS 5440: AI in Fintech </title>
 </head>
 <body background="../../images/crysback.jpg">
 
@@ -23,8 +23,8 @@
        <td style="padding: 0.75pt;">
       <p>
 <span style="font-size: 18pt;">
-<b><big>MAFS 6010Z. Artificial Intelligence in Fintech <br>
-   Fall 2023</big></b>
+<b><big>MAFS 5440. Artificial Intelligence in Fintech <br>
+   Fall 2024</big></b>
 <br>
 </p>
 </td>
@@ -78,7 +78,7 @@
 
 <h3>Time and Place:</h3>
 <p style="margin-left: 0.5in;">
-<big><em>Monday 19:30-22:20pm, Rm 4619 (Lift 31-32)</em> <br>
+<big><em>Wednesday 19:30-22:20pm, Rm 4619 (Lift 31-32)</em> <br>
 </big>
 <!---
 <big><em>This term we will be using Piazza for class discussion. The system is highly catered to getting you help fast and efficiently from classmates and myself. 
@@ -232,7 +232,7 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 </tr>
 
 <tr>
-<td>04/09/2023, Mon </td>
+<td>04/09/2024, Wed </td>
 <td>Lecture 01: Overview and History of Artificial Intelligence in Fintech. [<a href="slides/Lecture01_overview.pdf"> slides </a>]	
 	<ul>[ Project 1 ]
 		<li> Warm-up project description [<a href="project1/project1.pdf"> pdf </a>] </li>
@@ -252,7 +252,7 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 </tr>
 	
 
-	
+<!---	
 <tr>
 <td>11/09/2023, Mon </td>
 <td>Lecture 02: Supervised Learning: Linear Regression and Classification <a href="slides/Lecture02_linear.pdf">[ slides ]</a>
@@ -634,7 +634,6 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 <td></td>
 </tr>
 
-<!---
 <tr>
 <td>25/11/2021, Thu</td>
 <td>Lecture 12: An Introduction to Unsupervised Learning: PCA, AutoEncoder, VAE, and GANs [<a href="slides/Lecture11_GAN.pdf"> slides </a>] </a>  
