--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 <h3>Time and Place:</h3>
 <p style="margin-left: 0.5in;">
-<big><em>Wednesday 19:30-22:20pm, Rm 4619 (Lift 31-32)</em> <br>
+<big><em>Wednesday 19:30-22:20pm, Lecture Theatre G (LTG)</em> <br>
 </big>
 <!---
 <big><em>This term we will be using Piazza for class discussion. The system is highly catered to getting you help fast and efficiently from classmates and myself. 
