--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 
 <tr>
 <td>04/09/2024, Wed </td>
-<td>Lecture 01: Overview and History of Artificial Intelligence in Fintech. [<a href="slides/Lecture01_overview.pdf"> slides </a>]	
+<td>Lecture 01: Overview and History of Artificial Intelligence in Fintech. [<a href="slides/Lecture01_overview_a.pdf"> slides A </a>][<a href="slides/Lecture01_overview_b.pdf"> slides B </a>]	
 	<ul>[ Project 1 ]
 		<li> Warm-up project description [<a href="project1/project1.pdf"> pdf </a>] </li>
 		<li> Kaggle: Home Credit Default Risk [<a href="https://www.kaggle.com/c/home-credit-default-risk"> link </a>]
