--- a/index.html
+++ b/index.html
@@ -298,11 +298,10 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 <td>2/10/2024, Wed</td>
 <td>Lecture 05: Support Vector Machines [<a href="slides/Lecture05_svm.pdf"> slides </a>]   
 	<br>
-	<ul>[ SVM ]:
+	<ul>[ Reference ]:
 		<li> To view .ipynb files below, you may try <a href="https://nbviewer.jupyter.org/"> [ Jupyter NBViewer] </a> </li> 
 		<li> Python Notebook for Support Vector Machines 
 			<a href="notebook/MAFS6010_svm.ipynb"> [ MAFS6010_svm.ipynb ] </a> </li> 
-	</li>
 	</ul>
 
 </td>
