--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 	</ul>
 
 	<ul>[ Topics on CNNs ]:
-		<li> Visualizing CNNs [<a href="slides/Lecture07_CNN2.pdf"> slides </a>] </li>
+		<li> Visualizing CNNs, transfer learning, neural style and adversarial examples  [<a href="slides/Lecture07_CNN+.pdf"> slides </a>] </li>
 		<li> To view .ipynb files below, you may try <a href="https://nbviewer.jupyter.org/"> [ Jupyter NBViewer] </a> </li> 
 		<li> Visualization of VGG16 in Pytorch Notebook 
 			[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/2020/notebook/vgg16-visualization.ipynb"> vgg16-visualization.ipynb </a>] </li>
