--- a/index.html
+++ b/index.html
@@ -350,6 +350,40 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 <td></td>
 </tr>
 
+	<td>09/10/2024, Wed </td>
+<td>Lecture 07: Other nonlinear models moving beyond linearity <a href="slides/Lecture04_nonlinear.pdf">[ slides ]</a> 
+	<br>
+	<ul>[Reference]:
+		<li> To view .ipynb files below, you may try <a href="https://nbviewer.jupyter.org/"> [ Jupyter NBViewer] </a> </li> 
+		<li> Python Notebook for ISLR Chapter 7 Lab 
+			<a href="https://github.com/mscaudill/IntroStatLearn/blob/master/notebooks/Ch7_Moving_Beyond_Linearity/Ch7_Lab.ipynb"> [Ch7_Lab.ipynb ] </a> </li> 
+	</li>
+	</ul>
+
+	<ul>[ Project 2 ]
+		<li> Project description: paper replication study [<a href="project2/project2.pdf"> pdf </a>] </li>
+		<li> Asset Pricing paper replication [<a href="project2/project2_Xiu_Asset_Pricing.pdf"> pdf </a>] </li>
+		<li> Reimaging paper replication [<a href="project2/project2_Xiu_Reimage.pdf"> pdf </a>] </li>
+	<br>	
+	<li> <B>Shihao Gu, Bryan Kelly and <a href="https://dachxiu.chicagobooth.edu/#research">Dacheng Xiu</a></B>
+		<br> <B>"Empirical Asset Pricing via Machine Learning"</B>, Review of Financial Studies, Vol. 33, Issue 5, (2020), 2223-2273. Winner of the 2018 Swiss Finance Institute Outstanding Paper Award.
+	 	<br> 
+		[<a href="https://dachxiu.chicagobooth.edu/download/ML.pdf"> link </a>]
+	<p>
+	</li>	
+	
+	<li> <B>Jingwen Jiang, Bryan Kelly and <a href="https://dachxiu.chicagobooth.edu/#research">Dacheng Xiu</a></B>
+		<br> <B>"(Re-)Imag(in)ing Price Trends"</B>, Chicago Booth Report, Aug 2021
+	 	<br> 
+		[<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3756587"> link </a>]
+	<p>
+	</li>	
+</td>
+<td>Y.Y.</td>
+<td></td>
+</tr>
+
+
 	<!---
 	<tr>
 <td>16/10/2023, Mon</td>
