--- a/index.html
+++ b/index.html
@@ -498,8 +498,10 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 <td>Y.Y.</td>
 <td></td>
 </tr>
+	<li> <a href="https://www.nobelprize.org/prizes/physics/2024/press-release/"> Nobel Prize in Physics 2024 </a> </li>
 	
-
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">The <a href="https://twitter.com/hashtag/NobelPrizeinPhysics2024?src=hash&amp;ref_src=twsrc%5Etfw">#NobelPrizeinPhysics2024</a> for Hopfield &amp; Hinton rewards plagiarism and incorrect attribution in computer science. It&#39;s mostly about Amari&#39;s &quot;Hopfield network&quot; and the &quot;Boltzmann Machine.&quot; <br><br>1. The Lenz-Ising recurrent architecture with neuron-like elements was published in…</p>&mdash; Jürgen Schmidhuber (@SchmidhuberAI) <a href="https://twitter.com/SchmidhuberAI/status/1844022724328394780?ref_src=twsrc%5Etfw">October 9, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+	
 	<tr>
 <td>06/11/2023, Mon</td>
 <td>Lecture 08: Attention, Transformer, GPT, and BERT [<a href="slides/Lecture09_transformer.pdf"> slides </a>]  </a>  
