--- a/index.html
+++ b/index.html
@@ -383,7 +383,44 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 <td></td>
 </tr>
 
+	<tr>
+<td>16/10/2023, Wed</td>
+<td>Lecture 07: An Introduction to Recurrent Neural Networks (RNN) and Long Short Term Memory (LSTM) [<a href="slides/Lecture08_RNN-LSTM.pdf"> slides </a>] </a>  
+	<br>
+	<ul>[Reference]:
+		<li> To view .ipynb files below, you may try <a href="https://nbviewer.jupyter.org/"> [ Jupyter NBViewer] </a> </li> 
+		<li> Character-level RNN, LSTM and GRU for Name Classification 
+		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/notebook/char_rnn_classification_tutorial.ipynb"> char_rnn_classification_tutorial.ipynb </a>] 
+		</li>
+		<li> Generating Shakespeare's Sonnet: RNN, LSTM, Bidirectional LSTM, and Momentum-LSTM
+		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/notebook/rnn_lstm_BiLSTM_mlstm_shakespeare.ipynb"> rnn_lstm_BiLSTM_mlstm_shakespeare.ipynb </a>]
+		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/notebook/rnn_lstm_biLSTM_shakespeare.ipynb"> rnn_lstm_biLSTM_shakespeare.ipynb </a>] 
+		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/notebook/shakespeare.txt"> shakespeare.txt </a>]
+		</li>
+		<li> RNN for generating Shakespeare's Sonnet 
+		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/notebook/rnn.ipynb"> rnn.ipynb </a>] 
+		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/notebook/shakespeare.txt"> shakespeare.txt </a>] 
+		</li> 
+		<li> LSTM for generating Shakespeare's Sonnet 
+		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/notebook/rnn_lstm_shakespeare.ipynb"> rnn_lstm_shakespeare.ipynb </a>] 
+		</li>	
+		<li> Bidirectional RNN for MNIST in pytorch
+		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/notebook/bidirection_lstm_mnist.ipynb"> bidirection_lstm_mnist.ipynb </a>] 
+		[<a href="https://www.youtube.com/watch?v=jGst43P-TJA"> Youtube </a>]
+		</li>	
+		<p>
+		<li> <a href="https://www.nobelprize.org/prizes/physics/2024/press-release/"> Nobel Prize in Physics 2024 </a> </li>
+		<li> <a href="https://x.com/hardmaru/status/1253189802452647936"> Geoff Hinton's response to Schmidhuber's critique </a> </li>
+		<li> Jorgen Schmidhuber: [<a href="https://people.idsia.ch/~juergen/deep-learning-miraculous-year-1990-1991.html"> Deep Learning: Our Miraculous Year 1990-1991
+ </a>] [<a href="https://people.idsia.ch/~juergen/critique-honda-prize-hinton.html"> Critique of Honda Prize for Dr. Hinton </a>]
+			<blockquote class="twitter-tweet"><p lang="en" dir="ltr">The <a href="https://twitter.com/hashtag/NobelPrizeinPhysics2024?src=hash&amp;ref_src=twsrc%5Etfw">#NobelPrizeinPhysics2024</a> for Hopfield &amp; Hinton rewards plagiarism and incorrect attribution in computer science. It&#39;s mostly about Amari&#39;s &quot;Hopfield network&quot; and the &quot;Boltzmann Machine.&quot; <br><br>1. The Lenz-Ising recurrent architecture with neuron-like elements was published in…</p>&mdash; Jürgen Schmidhuber (@SchmidhuberAI) <a href="https://twitter.com/SchmidhuberAI/status/1844022724328394780?ref_src=twsrc%5Etfw">October 9, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
+		</li>	  
+	</ul>
+</td>
+<td>Y.Y.</td>
+<td></td>
+</tr>
 	<!---
 	<tr>
 <td>16/10/2023, Mon</td>
@@ -464,44 +501,10 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 </tr>
 
 	
-	<tr>
-<td>30/10/2023, Mon</td>
-<td>Lecture 07: An Introduction to Recurrent Neural Networks (RNN) and Long Short Term Memory (LSTM) [<a href="slides/Lecture08_RNN-LSTM.pdf"> slides </a>] </a>  
-	<br>
-	<ul>[Reference]:
-		<li> To view .ipynb files below, you may try <a href="https://nbviewer.jupyter.org/"> [ Jupyter NBViewer] </a> </li> 
-		<li> Character-level RNN, LSTM and GRU for Name Classification 
-		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/notebook/char_rnn_classification_tutorial.ipynb"> char_rnn_classification_tutorial.ipynb </a>] 
-		</li>
-		<li> Generating Shakespeare's Sonnet: RNN, LSTM, Bidirectional LSTM, and Momentum-LSTM
-		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/notebook/rnn_lstm_BiLSTM_mlstm_shakespeare.ipynb"> rnn_lstm_BiLSTM_mlstm_shakespeare.ipynb </a>]
-		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/notebook/rnn_lstm_biLSTM_shakespeare.ipynb"> rnn_lstm_biLSTM_shakespeare.ipynb </a>] 
-		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/notebook/shakespeare.txt"> shakespeare.txt </a>]
-		</li>
-		<li> RNN for generating Shakespeare's Sonnet 
-		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/notebook/rnn.ipynb"> rnn.ipynb </a>] 
-		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/notebook/shakespeare.txt"> shakespeare.txt </a>] 
-		</li> 
-		<li> LSTM for generating Shakespeare's Sonnet 
-		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/notebook/rnn_lstm_shakespeare.ipynb"> rnn_lstm_shakespeare.ipynb </a>] 
-		</li>	
-		<li> Bidirectional RNN for MNIST in pytorch
-		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/notebook/bidirection_lstm_mnist.ipynb"> bidirection_lstm_mnist.ipynb </a>] 
-		[<a href="https://www.youtube.com/watch?v=jGst43P-TJA"> Youtube </a>]
-		</li>	
-		<p>
-		<li> Jorgen Schmidhuber: [<a href="https://people.idsia.ch/~juergen/deep-learning-miraculous-year-1990-1991.html"> Deep Learning: Our Miraculous Year 1990-1991
- </a>] [<a href="https://people.idsia.ch/~juergen/critique-honda-prize-hinton.html"> Critique of Honda Prize for Dr. Hinton </a>]
-		</li>	  
-	</ul>
-</td>
-<td>Y.Y.</td>
-<td></td>
-</tr>
-	<li> <a href="https://www.nobelprize.org/prizes/physics/2024/press-release/"> Nobel Prize in Physics 2024 </a> </li>
+
+
 	
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">The <a href="https://twitter.com/hashtag/NobelPrizeinPhysics2024?src=hash&amp;ref_src=twsrc%5Etfw">#NobelPrizeinPhysics2024</a> for Hopfield &amp; Hinton rewards plagiarism and incorrect attribution in computer science. It&#39;s mostly about Amari&#39;s &quot;Hopfield network&quot; and the &quot;Boltzmann Machine.&quot; <br><br>1. The Lenz-Ising recurrent architecture with neuron-like elements was published in…</p>&mdash; Jürgen Schmidhuber (@SchmidhuberAI) <a href="https://twitter.com/SchmidhuberAI/status/1844022724328394780?ref_src=twsrc%5Etfw">October 9, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-	
+
 	<tr>
 <td>06/11/2023, Mon</td>
 <td>Lecture 08: Attention, Transformer, GPT, and BERT [<a href="slides/Lecture09_transformer.pdf"> slides </a>]  </a>  
