--- a/index.html
+++ b/index.html
@@ -410,10 +410,12 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 		</li>	
 		<p>
 		<li> <a href="https://www.nobelprize.org/prizes/physics/2024/press-release/"> Nobel Prize in Physics 2024 </a> </li>
-			<li> 
+			<li> <a href="https://x.com/schmidhuberai/status/1844022724328394780?s=46&t=Eqe0JRFwCu11ghm5ZqO9xQ"> Jorgen Schmidhuber's Critique: </a>
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">The <a href="https://twitter.com/hashtag/NobelPrizeinPhysics2024?src=hash&amp;ref_src=twsrc%5Etfw">#NobelPrizeinPhysics2024</a> for Hopfield &amp; Hinton rewards plagiarism and incorrect attribution in computer science. It&#39;s mostly about Amari&#39;s &quot;Hopfield network&quot; and the &quot;Boltzmann Machine.&quot; <br><br>1. The Lenz-Ising recurrent architecture with neuron-like elements was published in…</p>&mdash; Jürgen Schmidhuber (@SchmidhuberAI) <a href="https://twitter.com/SchmidhuberAI/status/1844022724328394780?ref_src=twsrc%5Etfw">October 9, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 			</li>
-		<li> <a href="https://x.com/hardmaru/status/1253189802452647936"> Geoff Hinton's response to Schmidhuber's critique </a> </li>
+		<li> <a href="https://x.com/hardmaru/status/1253189802452647936"> Geoff Hinton's response to Schmidhuber's critique: </a> 
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Geoff Hinton&#39;s response to Schmidhuber&#39;s critique on r/ML <a href="https://t.co/kUIznzbRBh">https://t.co/kUIznzbRBh</a> <a href="https://t.co/joNcuzJnFk">https://t.co/joNcuzJnFk</a> <a href="https://t.co/3HWbfT5T9F">pic.twitter.com/3HWbfT5T9F</a></p>&mdash; hardmaru (@hardmaru) <a href="https://twitter.com/hardmaru/status/1253189802452647936?ref_src=twsrc%5Etfw">April 23, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>		
+		</li>
 		<li> Jorgen Schmidhuber: [<a href="https://people.idsia.ch/~juergen/deep-learning-miraculous-year-1990-1991.html"> Deep Learning: Our Miraculous Year 1990-1991
  </a>] [<a href="https://people.idsia.ch/~juergen/critique-honda-prize-hinton.html"> Critique of Honda Prize for Dr. Hinton </a>]			
 		</li>	  
