--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 		<li> <B>Speaker</B>: Invited guests from <a href="https://en.superquant.fund/">Super Quantum</a> </li>
 		<li> <B>Introduction</B>: Super Quantum is a quantitative asset management firm founded in 2019 by Professor Michael Zhang. With a vision to bring ‘genuine’ science to investing in the opportunistic China-A share market, 
 			the team combines state-of-the-art research on deep learning, mathematics, econometrics and statistics, with solid experience in the finance industry to design quantitative strategies that consistently outperform the market. 
-			Super Quantum manages 5-10 billion RMB and received Type 9 (asset management) license from SFC in Hong Kong. 
+			Super Quantum currently manages 5-10 billion RMB and has Type 9 (asset management) license from SFC in Hong Kong. 
 		</li>
 	</ul>
 </td>
