--- a/index.html
+++ b/index.html
@@ -498,7 +498,39 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 <td>Y.Y.</td>
 <td></td>
 </tr>
-	
+
+	<tr>
+<td>06/11/2024, Wed</td>
+<td>Lecture 11: An Introduction to Reinforcement Learning with Applications in Quantitative Finance [<a href="slides/Lecture10_reinforcement.pdf"> slides </a>]  
+	<br>
+	<ul>[ Reference ]:
+		<li> Google DeepMind's Deep Q-learning playing Atari Breakout:
+		[<a href="https://www.youtube.com/watch?v=V1eYniJ0Rnk"> youtube </a>]
+		</li>
+		<li> To view .ipynb files below, you may try <a href="https://nbviewer.jupyter.org/"> [ Jupyter NBViewer] </a> </li> 
+		<li> Deep Q-Learning Pytorch Tutorial: [<a href="https://pytorch.org/tutorials/intermediate/reinforcement_q_learning.html"> link </a> ]
+		</li>
+		<li> A Tutorial of Reinforcement Learning for Quantitative Trading: 
+		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/tree/master/tutorial/Tutorial_FinRL_stock_trading_NeurIPS_2018_3run.ipynb"> Tutorial </a>]
+		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/tree/master/tutorial/Tutorial_FinRL_replicate_3run.ipynb"> Replicate </a>]
+		</li>
+		<li> FinRL: Deep Reinforcement Learning for Quantitative Finance
+		[<a href="https://github.com/AI4Finance-Foundation/FinRL"> GitHub </a>]
+		</li>
+		<li> Reinforcement Learning and Supervised Learning for Quantitative Finance: [<a href="https://github.com/Ceruleanacg/Personae/blob/master/README.md"> link </a>]
+		</li>
+		<li> Hierarchical Reinforced Trader (HRT): A Bi-Level Approach for Optimizing Stock Selection and Execution, by Zijie Zhao, Roy E. Welsch. 
+			[<a href="https://arxiv.org/abs/2410.14927"> arXiv:2410.14927 </a>]
+		</li>
+		<li> Prof. Michael Kearns, University of Pennsyvania, Algorithmic Trading and Machine Learning, 
+			Simons Institute at Berkeley [<a href="https://simons.berkeley.edu/talks/michael-kearns-2015-11-19"> link </a> ]
+		</li>
+	</ul>
+</td>
+<td>Y.Y.</td>
+<td></td>
+</tr>
+
 	<!---
 	<tr>
 <td>16/10/2023, Mon</td>
@@ -579,42 +611,6 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 </tr>
 
 	
-
-
-	
-
-
-
-
-	<tr>
-<td>13/11/2023, Mon</td>
-<td>Lecture 09: An Introduction to Reinforcement Learning with Applications in Quantitative Finance [<a href="slides/Lecture10_reinforcement.pdf"> slides </a>]  
-	<br>
-	<ul>[ Reference ]:
-		<li> Google DeepMind's Deep Q-learning playing Atari Breakout:
-		[<a href="https://www.youtube.com/watch?v=V1eYniJ0Rnk"> youtube </a>]
-		</li>
-		<li> To view .ipynb files below, you may try <a href="https://nbviewer.jupyter.org/"> [ Jupyter NBViewer] </a> </li> 
-		<li> Deep Q-Learning Pytorch Tutorial: [<a href="https://pytorch.org/tutorials/intermediate/reinforcement_q_learning.html"> link </a> ]
-		</li>
-		<li> A Tutorial of Reinforcement Learning for Quantitative Trading: 
-		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/tree/master/tutorial/Tutorial_FinRL_stock_trading_NeurIPS_2018_3run.ipynb"> Tutorial </a>]
-		[<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/tree/master/tutorial/Tutorial_FinRL_replicate_3run.ipynb"> Replicate </a>]
-		</li>
-		<li> FinRL: Deep Reinforcement Learning for Quantitative Finance
-		[<a href="https://github.com/AI4Finance-Foundation/FinRL"> GitHub </a>]
-		</li>
-		<li> Reinforcement Learning and Supervised Learning for Quantitative Finance: [<a href="https://github.com/Ceruleanacg/Personae/blob/master/README.md"> link </a>]
-		</li>
-		<li> Prof. Michael Kearns, University of Pennsyvania, Algorithmic Trading and Machine Learning, 
-			Simons Institute at Berkeley [<a href="https://simons.berkeley.edu/talks/michael-kearns-2015-11-19"> link </a> ]
-		</li>
-	</ul>
-</td>
-<td>Y.Y.</td>
-<td></td>
-</tr>
-
 
 	<tr>
 	<td>20/11/2023, Mon</td>
