--- a/index.html
+++ b/index.html
@@ -531,6 +531,40 @@ Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT c
 <td></td>
 </tr>
 
+
+	<tr>
+	<td>13/11/2023, Wed</td>
+	<td>Lecture 12: Final Project. 
+	<br>
+	<ul>[ Project 3 ]		
+		<li> Description: [<a href="project3/project3.pdf"> project3.pdf </a>]
+		</li>
+		<li> Kaggle: Jane Street Forecasting  [<a href="project3/project3.JS_forecast.pdf"> slides </a>]
+		</li>
+		<li> Kaggle: M5 Contests  [<a href="project3/project3.M5.pdf"> slides </a>]
+		</li>
+		<li> Cryptocurrency Trading Project [<a href="project3/project3-crypto%20trading.pdf"> slides (pdf) </a>]
+		</li>	
+		<li> Large Language Models with Financial Analysis [<a href="project3/project3-LLM%2Bfinance.pdf"> slides (pdf) </a>] </li>
+		<p>
+		</ul>
+	
+	<ul>[ Reference ]
+		<li> Kaggle: Jane Street Forecasting. [<a href="https://www.kaggle.com/competitions/jane-street-real-time-market-data-forecasting/"> link </a>]
+		</li>
+		<!--- <li> Kaggle: G-Research Crypto Forecasting. [<a href="https://www.kaggle.com/c/g-research-crypto-forecasting/"> link </a>]
+		</li>
+		---->
+		<li> Kaggle: M5 Forecasting - Accuracy, Estimate the unit sales of Walmart retail goods. [<a href="https://www.kaggle.com/c/m5-forecasting-accuracy"> link </a>]
+		</li>
+		<li> Kaggle: M5 Forecasting - Uncertainty, Estimate the uncertainty distribution of Walmart unit sales. [<a href="https://www.kaggle.com/c/m5-forecasting-uncertainty"> link </a>]
+		</li>
+	</ul>
+
+</td>
+<td>Y.Y.</td>
+<td></td>
+</tr>
 	<!---
 	<tr>
 <td>16/10/2023, Mon</td>
