--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <p>
 <span style="font-size: 18pt;">
 <b><big>MAFS 5440. Artificial Intelligence in Fintech <br>
-   Fall 2024</big></b>
+   Fall 2025 </big></b>
 <br>
 </p>
 </td>
@@ -208,7 +208,7 @@
 
 <p style="margin-left: 0.5in;">
 <big> <br>
-Email: Mr. CAO, He and Ms. LIU, Xuantong < <em> aifin.hkust (add "AT gmail DOT com" afterwards) </em> >
+Email: Mr. FU, Xiaoyi < <em> aifin.hkust (add "AT gmail DOT com" afterwards) </em> >
 </big>
 </p>
 	
