--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 <h3>Time and Place:</h3>
 <p style="margin-left: 0.5in;">
-<big><em>Wednesday 19:30-22:20pm, Lecture Theatre G (LTG)</em> <br>
+<big><em>Wednesday 19:30-22:20pm, G010, CYT Bldg (140)</em> <br>
 </big>
 </p>
 	
