--- a/index.html
+++ b/index.html
@@ -227,20 +227,21 @@ Email: Mr. FU, Xiaoyi < <em> aifin.hkust (add "AT gmail DOT com" afterwards) </e
 
 <tr>
 <td>03/09/2025, Wed </td>
-<td>Lecture 01: Overview and History of Artificial Intelligence in Fintech. [<a href="slides/Lecture01_overview_a.pdf"> slides A </a>][<a href="slides/Lecture01_overview_b.pdf"> slides B </a>]	
+<td>Lecture 01: Overview and History of Artificial Intelligence in Fintech. [<a href="slides/Lecture01_overview.pdf"> slides </a>]
+		<!---
 	<ul>[ Project 1 ]
 		<li> Warm-up project description [<a href="project1/project1.pdf"> pdf </a>] </li>
 		<li> Kaggle: Home Credit Default Risk [<a href="https://www.kaggle.com/c/home-credit-default-risk"> link </a>]
 		</li>
 		
-		<!---
+	
 		<li> GitHub Repository for reports of Project 1
 		<a href="https://github.com/aifin-hkust/aifin-hkust.github.io/blob/master/project1//"> [ GitHub ] </a>
 		<p>
 		</li>	
-		--->
 		
 	</ul>
+	--->
 
 </td>
 <td>Y.Y.</td>
@@ -311,7 +312,7 @@ Email: Mr. FU, Xiaoyi < <em> aifin.hkust (add "AT gmail DOT com" afterwards) </e
 <td></td>
 </tr>
 
-
+<!----
 	<tr>
 <td>06/10/2024, Sun</td>
 <td>Lecture 06: An Introduction to Convolutional Neural Networks [<a href="slides/Lecture06_CNN.pdf"> slides </a>]   
@@ -552,9 +553,8 @@ Email: Mr. FU, Xiaoyi < <em> aifin.hkust (add "AT gmail DOT com" afterwards) </e
 	<ul>[ Reference ]
 		<li> Kaggle: Jane Street Forecasting. [<a href="https://www.kaggle.com/competitions/jane-street-real-time-market-data-forecasting/"> link </a>]
 		</li>
-		<!--- <li> Kaggle: G-Research Crypto Forecasting. [<a href="https://www.kaggle.com/c/g-research-crypto-forecasting/"> link </a>]
+		<li> Kaggle: G-Research Crypto Forecasting. [<a href="https://www.kaggle.com/c/g-research-crypto-forecasting/"> link </a>]
 		</li>
-		---->
 		<li> Kaggle: M5 Forecasting - Accuracy, Estimate the unit sales of Walmart retail goods. [<a href="https://www.kaggle.com/c/m5-forecasting-accuracy"> link </a>]
 		</li>
 		<li> Kaggle: M5 Forecasting - Uncertainty, Estimate the uncertainty distribution of Walmart unit sales. [<a href="https://www.kaggle.com/c/m5-forecasting-uncertainty"> link </a>]
@@ -574,6 +574,9 @@ Email: Mr. FU, Xiaoyi < <em> aifin.hkust (add "AT gmail DOT com" afterwards) </e
 <td>Y.Y.</td>
 <td></td>
 </tr>
+
+
+---->
 	<!---
 	<tr>
 <td>16/10/2023, Mon</td>
