--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ Email: Mr. FU, Xiaoyi < <em> aifin.hkust (add "AT gmail DOT com" afterwards) </e
 	
 
 	<tr>
-<td>11/09/2024, Wed </td>
+<td>10/09/2025, Wed </td>
 <td>Lecture 02: Supervised Learning: Linear Regression and Classification <a href="slides/Lecture02_linear.pdf">[ slides ]</a>
 	
 	<ul>[ Reference ]
@@ -265,7 +265,27 @@ Email: Mr. FU, Xiaoyi < <em> aifin.hkust (add "AT gmail DOT com" afterwards) </e
 <td></td>
 </tr>		
 
-
+		<tr>
+<td>11/09/2025, Thu </td>
+<td> Seminar.
+		<ul>
+		<li> <B>Title</B>: PKU Quest: AI-Powered Math Education Practice at Peking University [<a href="https://github.com/yao-lab/yao-lab.github.io/blob/master/course/statml/slides/Seminar_ChenL-LiuZ.png"> announcement </a>] [<a href=""> slides </a>]</li>
+		<li> <B>Speaker</B>: Leheng Chen and Zihao Liu, Peking University </li>
+		<li> <B>Time</B>: Thursday Sep 11, 2025, 3:30pm </li>
+		<li> <B>Venue</B>: Room 2612B (near Lift 31 & 32) </li>
+		<li> <B>Abstract</B>: 
+			The advent of Generative AI necessitates a paradigm shift in higher education, calling for new, diverse models of interaction between students, teachers, and AI. In response to this challenge, Peking University has developed PKU Quest, an AI-assisted platform designed to explore these new pedagogical frontiers. PKU Quest focuses on optimizing for the unique demands of mathematics education, and has developed the "Math Tutor," a tool specifically designed for math problem-solving support. Instead of providing direct answers, the Math Tutor engages students in a heuristic and exploratory dialogue, guiding them to develop independent thinking and problem-solving skills. This application has now been implemented across all foundational mathematics courses at Peking University. 
+			This presentation will share our journey in developing PKU Quest, discussing the motivations, challenges, and practical outcomes of what we consider a first step in exploring the vast potential of AI in education.
+		<li> <B>Bio</B>: 
+			<I>Leheng Chen</I> is a Ph.D. student at the Beijing International Center for Mathematical Research (BICMR), Peking University, advised by Professor Bin Dong. He has broad interests in the application of artificial intelligence. Previously, he explored research directions in AI for Science, such as thermodynamic modeling and foundation models for partial differential equations, with his work published in Physical Review E and at an ICLR Workshop. He has since shifted his research focus to the practical application of AI in Education, where he designed and developed "PKU Quest," an AI-assisted teaching and learning platform for Peking University.
+			<br>
+			<I>Zihao Liu (Leo)</I> is a Ph.D. student in Applied Mathematics and Artificial Intelligence at the School of Mathematical Sciences, Peking University. His interests span the application of AI to education and scientific understanding, with recent work focusing on improving the pedagogical effectiveness of AI-powered educational agents and building benchmark datasets for evaluating AI capabilities. As the founder and lead developer of PKU Quest and AKIS (AI Knowledge Intelligent Solution), he focuses on the practical deployment of AI-in-education systems and has helped design and develop “AIBOOKS,” an intelligent digital-textbook platform, and “Math Tutor,” 
+	a guided problem-solving assistant for students. He is deeply committed to advancing the integration of AI and education.
+		</ul> 
+</td>
+<td>Y.Y.</td>
+<td></td>
+</tr>		
 
 	<tr>
 <td>25/09/2024, Wed </td>
