--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ Email: Mr. FU, Xiaoyi < <em> aifin.hkust (add "AT gmail DOT com" afterwards) </e
 </tr>		
 
 	<tr>
-<td>25/09/2024, Wed </td>
+<td>17/09/2025, Wed </td>
 <td>Lecture 03: Model Assessment and Selection: Subset, Ridge, Lasso, and PCR <a href="slides/Lecture03_selection.pdf">[ slides ]</a> 
 	<br>
 	<ul>[Reference]:
@@ -296,12 +296,16 @@ Email: Mr. FU, Xiaoyi < <em> aifin.hkust (add "AT gmail DOT com" afterwards) </e
 		<li> Python Notebook for Model Selection (Subset, Ridge, Lasso, and Principal Component Regression) 
 			<a href="notebook/MAFS6010_Selection.ipynb"> [ MAFS6010_Selection.ipynb ] </a> </li> 
 	</ul>
+	<ul>[ Seminar ] 
+		<li> <B>Speaker</B>: QRT guest speakers [<a href="slides/QRT-oncampus.jpg"> poster </a>]</li>
+	</ul>
 </td>
 <td>Y.Y.</td>
 <td></td>
 </tr>
 
 
+<!----
 	<tr>
 <td>29/09/2024, Sun </td>
 <td>Lecture 04: Decision Tree, Bagging, Random Forests and Boosting <a href="slides/Lecture04_tree.pdf">[ slides ]</a> 
@@ -332,7 +336,6 @@ Email: Mr. FU, Xiaoyi < <em> aifin.hkust (add "AT gmail DOT com" afterwards) </e
 <td></td>
 </tr>
 
-<!----
 	<tr>
 <td>06/10/2024, Sun</td>
 <td>Lecture 06: An Introduction to Convolutional Neural Networks [<a href="slides/Lecture06_CNN.pdf"> slides </a>]   
