--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ Email: Mr. FU, Xiaoyi < <em> aifin.hkust (add "AT gmail DOT com" afterwards) </e
 			<a href="notebook/MAFS6010_Selection.ipynb"> [ MAFS6010_Selection.ipynb ] </a> </li> 
 	</ul>
 	<ul>[ Seminar ] 
-		<li> <B>Speaker</B>: QRT guest speakers [<a href="slides/QRT-oncampus.jpg"> poster </a>]</li>
+		<li> <B>Speaker</B>: QRT guest speakers [<a href="slides/QRT-oncampus.jpeg"> poster </a>]</li>
 	</ul>
 </td>
 <td>Y.Y.</td>
