--- a/index.html
+++ b/index.html
@@ -304,6 +304,23 @@ Email: Mr. FU, Xiaoyi < <em> aifin.hkust (add "AT gmail DOT com" afterwards) </e
 <td></td>
 </tr>
 
+	<tr>
+<td>24/09/2025, Wed </td>
+<td>Lecture 04: Project 1  <a href="2025/project1.pdf">[ pdf ]</a>   
+	<br>
+	<ul>[ Reference ]:
+		<li> Kaggle: Home Credit Default Risk [<a href="https://www.kaggle.com/c/home-credit-default-risk"> link </a>]
+		</li>
+		<li> Kaggle: M5 Forecasting - Accuracy, Estimate the unit sales of Walmart retail goods. 
+		[<a href="https://www.kaggle.com/c/m5-forecasting-accuracy"> link </a>]
+		</li>
+	</ul>
+	
+</td>
+<td>Y.Y.</td>
+<td></td>
+</tr>
+
 
 <!----
 	<tr>
