--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ Email: Mr. FU, Xiaoyi < <em> aifin.hkust (add "AT gmail DOT com" afterwards) </e
 
 	<tr>
 <td>24/09/2025, Wed </td>
-<td>Lecture 04: Project 1  <a href="2025/project1.pdf">[ pdf ]</a>   
+<td>Lecture 04: Project 1  (via Canvas Zoom due to typhoon) <a href="2025/project1.pdf">[ pdf ]</a>   
 	<br>
 	<ul>[ Reference ]:
 		<li> Kaggle: Home Credit Default Risk [<a href="https://www.kaggle.com/c/home-credit-default-risk"> link </a>]
