--- a/index.html
+++ b/index.html
@@ -343,6 +343,15 @@ Email: Mr. FU, Xiaoyi < <em> aifin.hkust (add "AT gmail DOT com" afterwards) </e
 		<li> To view .ipynb files below, you may try <a href="https://nbviewer.jupyter.org/"> [ Jupyter NBViewer] </a> </li> 
 		<li> Python Notebook for Support Vector Machines 
 			<a href="notebook/MAFS6010_svm.ipynb"> [ MAFS6010_svm.ipynb ] </a> </li> 
+		<br>
+		<li> Daniel Soudry, Elad Hoffer, Mor Shpigel Nacson, Suriya Gunasekar, Nathan Srebro. <B>The Implicit Bias of Gradient Descent on Separable Data.</B> 
+		[<a href="https://arxiv.org/abs/1710.10345"> arXiv:1710.10345 </a>]. ICLR 2018. Gradient descent on logistic regression leads to max margin. </li>
+		<li> Matus Telgarsky. <B>Margins, Shrinkage, and Boosting.</B> <a href="https://arxiv.org/abs/1303.4172">[ arXiv:1303.4172 ]</a>. ICML 2013. An older paper on gradient descent on exponential/logistic loss 
+		leads to max margin. </li>
+		<li> Yuan Yao, <a href="http://www.disi.unige.it/person/RosascoL/">Lorenzo Rosasco</a> and <a href="http://www.pascal-network.org/Network/Researchers/150/">Andrea Caponnetto</a>. <B>On Early Stopping in Gradient Descent Learning.</B> <i>Constructive Approximation</i>, 2007, 26 (2): 289-315.
+[<a href="https://link.springer.com/article/10.1007/s00365-006-0663-2"> link </a>]
+</li>
+		<li> Jingfeng Wu, Peter L. Bartlett, Jason D. Lee, Sham M. Kakade, and Bin Yu. <B>Risk Comparisons in Linear Regression: Implicit Regularization Dominates Explicit Regularization.</B> <a href="https://arxiv.org/abs/2509.17251">[ arXiv:2509.17251 ]</a></li>
 	</ul>
 
 </td>
