--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@ Email: Mr. FU, Xiaoyi < <em> aifin.hkust (add "AT gmail DOT com" afterwards) </e
 
 		<tr>
 	<td>10/11/2025, Sat </td>
-	<td>Seminar </a> 
+	<td> Lecture 6+: Seminar </a> 
 	<br>
 
 	<ul>
