--- a/index.html
+++ b/index.html
@@ -336,8 +336,8 @@ Email: Mr. FU, Xiaoyi < <em> aifin.hkust (add "AT gmail DOT com" afterwards) </e
 </tr>
 
 	<tr>
-<td>02/10/2024, Wed</td>
-<td>Lecture 05: Support Vector Machines [<a href="slides/Lecture06_svm.pdf"> slides </a>]   
+<td>10/08/2025, Wed</td>
+<td>Lecture 06: Support Vector Machines [<a href="slides/Lecture06_svm.pdf"> slides </a>]   
 	<br>
 	<ul>[ Reference ]:
 		<li> To view .ipynb files below, you may try <a href="https://nbviewer.jupyter.org/"> [ Jupyter NBViewer] </a> </li> 
@@ -384,7 +384,7 @@ Jingfeng Wu is a postdoctoral fellow at the Simons Institute for the Theory of C
 
 	<tr>
 <td>10/15/2025, Wed</td>
-<td>Lecture 07: An Introduction to Convolutional Neural Networks [<a href="https://yao-lab.github.io/course/statml/slides/Lecture07_CNN.pdf"> YY's slides </a>] and EasyChair Submission Instruction for Project 1 [<a href=""> slides </a>] 
+<td>Lecture 07: An Introduction to Convolutional Neural Networks [<a href="slides/Lecture07_CNN.pdf"> YY's slides </a>] and EasyChair Submission Instruction for Project 1 [<a href=""> slides </a>] 
 	<br>
 	<ul>[Reference]:
 		<li> To view .ipynb files below, you may try <a href="https://nbviewer.jupyter.org/"> [ Jupyter NBViewer] </a> </li> 
