--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@ Jingfeng Wu is a postdoctoral fellow at the Simons Institute for the Theory of C
 
 	<tr>
 <td>10/15/2025, Wed</td>
-<td>Lecture 07: An Introduction to Convolutional Neural Networks [<a href="slides/Lecture07_CNN.pdf"> slides </a>] and EasyChair Submission Instruction for Project 1 [<a href=""> slides </a>] 
+<td>Lecture 07: An Introduction to Convolutional Neural Networks [<a href="slides/Lecture07_CNN.pdf"> slides </a>] and EasyChair Instruction for Project 1 [<a href="tutorial/Project1_MAFS5440_Instruction.pdf"> slides </a>] 
 	<br>
 	<ul>[Reference]:
 		<li> To view .ipynb files below, you may try <a href="https://nbviewer.jupyter.org/"> [ Jupyter NBViewer] </a> </li> 
