--- a/index.html
+++ b/index.html
@@ -415,8 +415,8 @@ Jingfeng Wu is a postdoctoral fellow at the Simons Institute for the Theory of C
 </tr>
 
 	<tr>
-<td>10/28/2025, Tue</td>
-<td>Lecture 08: An Introduction to Recurrent Neural Networks (RNN), Long Short Term Memory (LSTM), Attention and Transformer [<a href="slides/Lecture08_RNN-LSTM-Transformer.pdf"> slides </a>] </a>  
+<td>11/01/2025, Sat</td>
+<td>Lecture 08: An Introduction to Recurrent Neural Networks (RNN), Long Short Term Memory (LSTM), Attention and Transformer [<a href="slides/Lecture08_RNN-LSTM-Transformer.pdf"> slides </a>], Rm 5560, 14:00.  
 	<br>
 	<ul>[Reference]:
 		<li> To view .ipynb files below, you may try <a href="https://nbviewer.jupyter.org/"> [ Jupyter NBViewer] </a> </li> 
