--- a/index.html
+++ b/index.html
@@ -554,8 +554,12 @@ Building on these ``base'' ICL algorithms, intriguingly, we show that transforme
 		</ul>
 	
 	<ul>[ Reference ]
+		<li> Kaggle: Home Credit Default Risk [<a href="https://www.kaggle.com/c/home-credit-default-risk"> link </a>]
+		</li>
 		<li> Kaggle: G-Research Crypto Forecasting. [<a href="https://www.kaggle.com/c/g-research-crypto-forecasting/"> link </a>]
 		</li>
+		<li> Kaggle: Jane Street Real-Time Market Data Forecasting. [<a href="https://www.kaggle.com/competitions/jane-street-real-time-market-data-forecasting/"> link </a>]
+		</li> 
 		<li> Kaggle: M5 Forecasting - Accuracy, Estimate the unit sales of Walmart retail goods. [<a href="https://www.kaggle.com/c/m5-forecasting-accuracy"> link </a>]
 		</li>
 		<li> Kaggle: M5 Forecasting - Uncertainty, Estimate the uncertainty distribution of Walmart unit sales. [<a href="https://www.kaggle.com/c/m5-forecasting-uncertainty"> link </a>]
