--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@ Building on these ``base'' ICL algorithms, intriguingly, we show that transforme
 
 	<tr>
 <td>11/12/2025, Wed</td>
-<td>Lecture 10: An Introduction to Reinforcement Learning with Applications in Quantitative Finance [<a href="slides/Lecture10_reinforcement.pdf"> slides </a>]  and Final Project Initialization  [<a href="project3/project2.pdf"> project2.pdf </a>]
+<td>Lecture 10: An Introduction to Reinforcement Learning with Applications in Quantitative Finance [<a href="slides/Lecture10_reinforcement.pdf"> slides </a>]  and Final Project Initialization  [<a href="project3/MAFS_5440_F25_project2.pdf"> project2.pdf </a>]
 	<br>
 	<ul>[ Reference ]:
 		<li> Google DeepMind's Deep Q-learning playing Atari Breakout:
@@ -566,6 +566,21 @@ Building on these ``base'' ICL algorithms, intriguingly, we show that transforme
 		</li>
 	</ul>
 
+	<ul>[ Paper Replication ]
+	<li> <B>Shihao Gu, Bryan Kelly and <a href="https://dachxiu.chicagobooth.edu/#research">Dacheng Xiu</a></B>
+		<br> <B>"Empirical Asset Pricing via Machine Learning"</B>, Review of Financial Studies, Vol. 33, Issue 5, (2020), 2223-2273. Winner of the 2018 Swiss Finance Institute Outstanding Paper Award.
+	 	<br> 
+		[<a href="https://dachxiu.chicagobooth.edu/download/ML.pdf"> link </a>]
+	<p>
+	</li>	
+	
+	<li> <B>Jingwen Jiang, Bryan Kelly and <a href="https://dachxiu.chicagobooth.edu/#research">Dacheng Xiu</a></B>
+		<br> <B>"(Re-)Imag(in)ing Price Trends"</B>, Chicago Booth Report, Aug 2021
+	 	<br> 
+		[<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3756587"> link </a>]
+	<p>
+	</li>	
+	</ul>
 </td>
 <td>Y.Y.</td>
 <td></td>
