--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@ Building on these ``base'' ICL algorithms, intriguingly, we show that transforme
 	</ul>
 		
 	<ul>[ Final Project ]		
-		<li> Description: [<a href="project3/project2.pdf"> project2.pdf </a>]
+		<li> Description: [<a href="project3/MAFS_5440_F25_project2.pdf"> project2.pdf </a>]
 		</li>
 		<!---
 		<li> Kaggle Contests  [<a href="project3/project3_Crypto_M5.pdf"> slides </a>]
