--- a/index.html
+++ b/index.html
@@ -586,6 +586,30 @@ Building on these ``base'' ICL algorithms, intriguingly, we show that transforme
 <td></td>
 </tr>
 
+
+	
+	<tr>
+<td>11/19/2025, Wed</td>
+<td>Lecture 12: Seminar and Student Presentations.
+	<br>	
+	<ul>[ Seminar ]
+		<li><B>Title: Application of AI Technology in the Securities and Finance Industry</B>. [<a href=""> slides </a>]</li>  
+		<li> <B>Speaker</B>: Dr. WANG Ying, Guosen Securities Co. Ltd. </li>
+		<li> <B>Bio</B>: <I>Dr. WANG Ying</I> holds a PhD in Computer Science and Engineering from the Hong Kong University of Science and Technology and a Bachelor's degree in Computer Science and Technology from the University of Science and Technology of China. She is currently an AI Architect at the Financial Technology Headquarters of Guosen Securities Co., Ltd., researching the application of AI in securities scenarios. Previously, during her doctoral studies at Huawei's 2012 Lab, her main research focus was on network resource allocation algorithms based on reinforcement learning.		</li>
+	</ul>
+	
+	<ul>[ Selected Presentations ]
+		<li>  Ming Mei, Li Xuzhi, Chen Yilin and Xie Xiaoxiao. Predicting Home Credit Default by Using Light Gradient Boosting Model. </li>
+		<li>  Kuo Yang. MAFS5440 Project 1: Home Credit Default Risk [<a href=""> slides </a>]</li>
+		<li>  Xinyu Xu, Zilong Pan and Hongen Tang. Home Credit Default Risk Assessment Based on LightGBMLinks to an external site. </li>
+		<li>  TKedeng Qiu, Zewen Wan, Yifei Song and Jiarui Jiang. Project 1: Home Credit Default Risk. </li>
+	</ul>	
+</td>
+<td>Y.Y.</td>
+<td></td>
+</tr>
+
+
 <!----
 
 	
@@ -627,6 +651,14 @@ Building on these ``base'' ICL algorithms, intriguingly, we show that transforme
 <td>Y.Y.</td>
 <td></td>
 </tr>
+
+		<li> <B>Abstract</B>: 
+			The existing pre-training paradigm for Large Language Models (LLMs) faces critical limitations from finite data, while test-time scaling issues amplify the Transformer's inefficiencies. 
+			This presentation analyzes architectural alternatives, beginning with linear attention, which removes the softmax operation and reformulates attention as a linear RNN to achieve O(1) inference memory. 
+			It also explores static and dynamic sparse attention mechanisms, alongside hybrid attention mechanisms that mix attention types across layers or within them to balance performance and efficiency. 
+			Experimental results confirm that these efficient architectures can match Transformer performance, thereby offering viable solutions to current scaling challenges.		
+		</li>
+
 
 	<td>09/10/2024, Wed </td>
 <td>Lecture 07: Other nonlinear models moving beyond linearity <a href="slides/Lecture04_nonlinear.pdf">[ slides ]</a> 
